[package]
name = "generator"
version = "0.1.0"
authors = ["Naoaki Iwakiri <naokiri@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
rusttype = "0.9"
# TODO: Use v0.3 when lambda is published to crates.io
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime.git", branch = "master" }
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime.git", branch = "master" }

imageproc = "0.22"
image = "0.23"